# project_template

./: Makefile  README.md  README.rst  cookiecutter.json  pyproject.toml
{{ cookiecutter.repo_name }}/: README.md
{{cookiecutter.repo_name}}/: setup.cfg
{{cookiecutter.repo_name}}/.ipython/profile_default/: ipython_config.py
{{cookiecutter.repo_name}}/conf/: README.md
{{cookiecutter.repo_name}}/conf/base/: catalog.yml  globals.yml  logging.yml
{{cookiecutter.repo_name}}/docker/grafana/provisioning/dashboards/: cadvisor.json  dashboard.yml  logs.json  metrics.json
{{cookiecutter.repo_name}}/docker/grafana/provisioning/datasources/: datasource.yml
{{cookiecutter.repo_name}}/docker/h2oai/: Dockerfile
{{cookiecutter.repo_name}}/docker/mlflow/: Dockerfile
{{cookiecutter.repo_name}}/docker/prometheus/: prometheus.yml
{{cookiecutter.repo_name}}/docker/promtail/: config.yml
{{cookiecutter.repo_name}}/docs/source/: conf.py  index.rst
{{cookiecutter.repo_name}}/src/: requirements.txt  setup.py
{{cookiecutter.repo_name}}/src/{{ cookiecutter.python_package }}/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
{{cookiecutter.repo_name}}/src/{{ cookiecutter.python_package }}/extras/config/: __init__.py  config_loader.py
{{cookiecutter.repo_name}}/src/{{ cookiecutter.python_package }}/extras/context/: context.py
